--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="contrase_a">Contraseña</string>
     <string name="login">Login</string>
     <string name="boton">Ingresar</string>
+    <string name="mensaje_campos_vacios">Nombre y clave no pueden ser vacios</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
