--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="contrase_a">Contraseña</string>
     <string name="login">Login</string>
     <string name="boton">Ingresar</string>
-    <string name="mensaje_campos_vacios">Nombre y clave no pueden ser vacios</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="mensaje_campos_vacios">campo nombre o clave no pueden estar vacios</string>
+    <string name="mensaje_nombre_vacio">campo nombre no puede estar vacio</string>
+    <string name="mensaje_clave_vacio">campo clave no puede estar vacio</string>
+    <string name="mensaje_nombre_invalido">El nombre no debe tener numeros</string>
 </resources>
